// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table Users {
  id integer [pk, increment, unique]
  username text [unique]
  email text [unique]
  password text
  register_date datetime
}

Table Cards {
  id integer [pk, increment, unique]
  title text
  creature text
  echo integer [default: 1]
  cost integer [default: 3]
  power integer [default: 2]
  card_type integer
  image_id integer
  cool_points integer [default: 0]
}

Table Players {
  id integer [pk, increment, unique]
  game_id integer
  player_id integer
  color text
  health integer [default: 20]
  hand_limit integer [default: 5]
  base_echo integer [default: 0]
  memos integer [default: 0]
  turn integer
}

Table Games {
  id integer [pk, increment, unique]
  cur_turn integer
  memos integer
  time_start datetime
  time_end datetime [null]
  winner integer [null]
}

Table Decks {
  id integer [pk, increment, unique]
  type text [default: "close_bank"] // deck, hand, table, discard, bank и т.д.
  if_open boolean [default: false]
  owner_id integer [null]
}

Table Types {
  id integer [pk, increment, unique]
  action text [default: "draw"]       // attack, defence, draw, bonus и т.д.
  usage_pattern text [default: "regular"]             // regular / discard completely / discard / top_deck
  if_permanent boolean [default: false]
  color text
}

Table DecksCards {
  id integer [pk, increment, unique]
  deck_id integer
  card_id integer
  position integer
}

Table Images {
  id integer [pk, increment, unique]
  title text
  file text [null]
}

// --- Связи ---

Ref: Cards.card_type > Types.id
Ref: Cards.image_id > Images.id

Ref: Players.game_id > Games.id
Ref: Players.player_id > Users.id

Ref: Games.winner > Players.id

Ref: Decks.owner_id > Players.id

Ref: DecksCards.deck_id > Decks.id
Ref: DecksCards.card_id > Cards.id